[project]
name = "pytest-ansible-kind"
version = "0.1.0"
description = "pytest plugin for testing ansible playbooks against a kind clusters."

readme = "README.md"
license = { file = "LICENSE" }

dependencies = [
  "pytest",
  "ansible-runner",
  "kubernetes",
  "pyyaml",
]

[project.entry-points.pytest11]
sb-ansible-kind = "pytest_ansible_kind.main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pytest_ansible_kind"]
